--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "guess-repo-type",
   "version": "0.1.0",
-  "description": "Guess the VCS managing a local repo"
+  "description": "Guess the VCS managing a local repo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
